# gitsql

./: .gitignore  .kateconfig  CMakeLists.txt  clang-mingw-amd64.cmake  git.cpp  git.h  gitsql.cpp  gitsql.sln  gitsql.vcxproj  gitsql.vcxproj.filters  mercurysql.cpp  mercurysql.h  nullable.h  table.cpp  tds.cpp  tds.h
.github/workflows/: build-linux.yml  build-windows.yml
src/: git.cpp  git.h  gitsql.cpp  gitsql.h  gitsql.rc  ldap.cpp  lex.cpp  lex.h  manifest.xml  master.cpp  outptr.h  parse.cpp  table.cpp
